Created variables in CSS

--- a/style/main.css
+++ b/style/main.css
@@ -1,18 +1,23 @@
 :root {
     font-family: 'Segoe UI', Tahoma, Geneva, sans-serif;
     font-size: large;
+    --background-color: initial;
+    --color: initial;
 }
-/* Light mode */
 @media (prefers-color-scheme: light) {
     body {
-        background-color: white;
-        color: #000;
+        --background-color: white;
+        --color: #000;
     }
 }
-/* Dark mode */
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #000;
-        color: white;
+        --background-color: #000;
+        --color: white;
     }
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--color);
 }
