--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -14,10 +14,12 @@
     background-color: var(--background-color);
     color: var(--color);
 }
-body {
+html, body {
     margin: 0;
     padding: 0;
-    width: 100%;
+    max-width: 100vw;
+}
+body {
     overflow-x: hidden;
 }
 * {
