Temp Fix: visual difference between link and normal text

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -29,7 +29,7 @@
             padding: 32px 100px 32px 32px;
 
             a {
-                text-decoration: none;
+                vertical-align: middle;
                 color: #AE6F58;
                 cursor: pointer;
             }
